Fix: blur would not show correctly on Firefox, Safari

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -4,6 +4,7 @@
 
 :root {
   /* Couleurs. */
+  --color-background: #181311;
   --color-light-text: #f5f5f5;
   --color-dark-text: #0a0a0a;
   --color-accentuation: #f99418;
@@ -123,7 +124,7 @@ html {
 }
 
 body {
-  background-color: black;
+  background-color: var(--color-background);
 
   /* Police par défaut. */
   font-family: "Roboto Regular";
@@ -159,6 +160,7 @@ li {
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
