--- a/src/components/Popup/MediaViewer/MediaViewer.css
+++ b/src/components/Popup/MediaViewer/MediaViewer.css
@@ -1,6 +1,5 @@
 .media-viewer {
   position: fixed;
-  z-index: 1;
   border-radius: var(--radius-large);
   overflow: hidden;
   user-select: none;
