--- a/src/pages/MainPage/ProjectsSection/ProjectCard/ProjectCard.css
+++ b/src/pages/MainPage/ProjectsSection/ProjectCard/ProjectCard.css
@@ -7,14 +7,20 @@
   flex-grow: 1;
   text-decoration: none;
   color: var(--color-light-text);
-  background-color: rgba(27, 18, 7, 0.5);
-  background-blend-mode: overlay;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.project-card:hover {
-  background-color: transparent;
+.project-card::after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  backdrop-filter: brightness(80%);
+}
+
+.project-card:hover::after {
+  backdrop-filter: brightness(100%);
 }
 
 .project-card-header {
@@ -23,6 +29,7 @@
   padding: 32px;
   align-self: flex-end;
   background: linear-gradient(rgba(60, 60, 60, 0), rgba(10, 10, 10, 0.8));
+  z-index: 1;
 }
 
 .project-card-header h1 {
